Fixed overflow issue and updated sal.js to only run animations once

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-.row {
+section {
     padding: 0;
     margin: 0;
 }
